2009-03-03  Badlop  <badlop@process-one.net>

	* src/mod_roster.erl: When account is deleted, cancel presence
	subscription for all roster items (EJAB-790)
	* src/mod_roster_odbc.erl: Likewise

	* src/mod_shared_roster.erl: Fix bug: a pending subscription
	request, and later the requester added to the roster due to a
	shared roster group, that request could neither be accepted or
	rejected (thanks to Brian Cully)(EJAB-869)

	* src/web/ejabberd_http_poll.erl: Allow configuration of session
	timeout, using new global option http_poll_timeout (EJAB-135)
	* doc/guide.tex: Document new option
	* doc/guide.html: Likewise

	* src/ejabberd_system_monitor.erl: Allow parametrizable watchdog
	threshold: option watchdog_large_heap or chatting with the
	watchdog bot (EJAB-545)
	* src/ejabberd_config.erl: Likewise
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

	* src/web/ejabberd_web_admin.erl: Show big integers with comma
	separators for easy reading

	* src/web/ejabberd_web_admin.erl: Calls to the hook
	webadmin_menu_node provide the node as first argument, and calls
	to webadmin_menu_hostnode provide both the host and the node. Fix
	call to make_menu_items, because webadmin_menu_node was called in
	cases where webadmin_menu_hostnode should be called. Align to
	right some table elements.

	* doc/Makefile: In Clean do not remove html. In new Distclean,
	remove also html.

	* doc/Makefile: When cleaning, remove contributed_modules.tex

	* src/Makefile.in: Fix arguments to Install program

	* doc/guide.tex: Provide only an example of language option
	* doc/guide.html: Likewise

	* doc/guide.tex: mod_muc can run in several nodes of cluster
	* doc/guide.html: Likewise

	* doc/api/process-one.css: Add some style to HTML elements

	* src/ejabberd_listener.erl: Fix EDoc errors
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/ejabberd_hooks.erl: Explanation in EDoc of some functions

	* doc/guide.tex: Explain that account creation is only supported