@@ -1,5 +1,8 @@
 2009-03-03  Badlop  <badlop@process-one.net>
 
+	* src/mod_muc/mod_muc.erl: Export function to create MUC
+	room (thanks to Eric Cestari) (EJAB-729)
+
 	* src/mod_roster.erl: When account is deleted, cancel presence
 	subscription for all roster items (EJAB-790)
 	* src/mod_roster_odbc.erl: Likewise
